--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,8 @@ jobs:
               run: dotnet build
 
             - name: Publish Moodle.Net NuGet package
-              run: cd /home/runner/work/Moodle.Net/Moodle.Net/Moodle.Net/bin/Release/net7.0/
+              run: |
+                  cd /home/runner/work/Moodle.Net/Moodle.Net/Moodle.Net/bin/Release/net7.0/
                   ls
               #run: dotnet pack -c Release --no-build
               working-directory: /
