--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
 
             - name: Publish Moodle.Net NuGet package
               run: |
-                  cd /home/runner/work/Moodle.Net/
+                  cd /home/runner/work/Moodle.Net/Moodle.Net
                   ls
               #run: dotnet pack -c Release --no-build
               working-directory: /
