--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,6 @@ jobs:
             - name: Publish Moodle.Net NuGet package
               run: |
                   cd /home/runner/work/Moodle.Net/Moodle.Net/Moodle.Net
-                  ls
                   dotnet pack -c Release --no-build
               working-directory: /
 
@@ -33,5 +32,7 @@ jobs:
               uses: softprops/action-gh-release@v1
               with:
                   files: ./Moodle.Net/bin/Release/*.nupkg
+                  title: Release v1.0.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              if: github.event_name == 'workflow_dispatch'
