--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,10 +28,10 @@ jobs:
               working-directory: /
 
             - name: Create release
+              id: create_release
+              uses: softprops/action-gh-release@v1
+              with:
+                  files: ./Moodle.Net/bin/Release/*.nupkg
+                  title: Release v1.0.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                  git tag -a v1.0.0 -m "Release 1.0.0"
-                  git push --follow-tags
-
-                  hub release create v1.0.0 -m "Release 1.0.0"
