--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,5 +33,6 @@ jobs:
               with:
                   files: ./Moodle.Net/bin/Release/*.nupkg
                   title: Release v1.0.0
+                  tag_name: v1.0.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
