--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
 
             - name: Create release
               id: create_release
-              uses: softprops/action-gh-release@v1
+              #uses: softprops/action-gh-release@v1
               run: |
                   ls
               with:
