--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,9 +32,9 @@ jobs:
               #uses: softprops/action-gh-release@v1
               run: |
                   ls
-              with:
-                  files: ./Moodle.Net/bin/Release/*.nupkg
-                  title: Release v1.0.0
-                  tag_name: v1.0.0
+              #with:
+              #files: ./Moodle.Net/bin/Release/*.nupkg
+              #title: Release v1.0.0
+              #tag_name: v1.0.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
