--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
               id: create_release
               #uses: softprops/action-gh-release@v1
               run: |
+                  cd ./Moodle.Net/bin/Release
                   ls
               #with:
               #files: ./Moodle.Net/bin/Release/*.nupkg
