--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
               id: create_release
               uses: softprops/action-gh-release@v1
               with:
-                  files: ./Moodle.Net/bin/Release/net7.0/*.nupkg
+                  files: ./Moodle.Net/bin/Release/net7.0/net7.0/*.nupkg
                   title: Release v1.0.0
                   tag_name: v1.0.0
               env:
