--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,10 +29,13 @@ jobs:
 
             - name: Create release
               id: create_release
-              uses: softprops/action-gh-release@v1
-              with:
-                  files: ./Moodle.Net/bin/Release/net7.0/net7.0/*.nupkg
-                  title: Release v1.0.0
-                  tag_name: v1.0.0
+              run: |
+                  cd ./Moodle.Net/bin/Release/net7.0/net7.0
+                  ls
+              #uses: softprops/action-gh-release@v1
+              #with:
+              #files: ./Moodle.Net/bin/Release/net7.0/Moodle.Netv.nupkg
+              #title: Release v1.0.0
+              #tag_name: v1.0.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
