--- a/Moodle.Net/Moodle.Net.csproj
+++ b/Moodle.Net/Moodle.Net.csproj
@@ -13,7 +13,7 @@
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="RestSharp" Version="110.2.1-alpha.0.13"/>
-        <None Include="Moodle.Net/docs/README.md" Pack="true" PackagePath="\"/>
+        <None Include="Moodle.Net/docs/README.md" Pack="true" PackagePath=""/>
     </ItemGroup>
 
     <PropertyGroup>
