added package icon

--- a/Moodle.Net/Moodle.Net.csproj
+++ b/Moodle.Net/Moodle.Net.csproj
@@ -15,12 +15,15 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="RestSharp" Version="110.2.1-alpha.0.13"/>
         <None Include="README.md" Pack="true" PackagePath=""/>
+        <None Include="../moodle_original_logo_icon_146420.png" Pack="true" Visible="false"
+              PackagePath="icons/moodle_original_logo_icon_146420.png"/>
     </ItemGroup>
 
     <PropertyGroup>
         <Authors>Tschokri</Authors>
         <Description>.Net Wrapper for Moodle API</Description>
         <PackageTags>moodle, library</PackageTags>
+        <PackageIcon>icons/moodle_original_logo_icon_146420.png</PackageIcon>
 
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <OutputType>Library</OutputType>
