--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,6 +41,7 @@ jobs:
 
   run_test:
     runs-on: ubuntu-latest
+    needs: [ create_nuget ]
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET
