--- a/Moodle.Net/Moodle.Net.csproj
+++ b/Moodle.Net/Moodle.Net.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageProjectUrl>https://github.com/tschokri/Moodle.Net</PackageProjectUrl>
+        <PackageIcon>icons\moodle_original_logo_icon_146420.png</PackageIcon>
+        <RepositoryUrl>https://github.com/tschokri/Moodle.Net</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
