--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-dotnet@v3
       
       - name: Build Moodle.Net
-        run: dotnet build Moodle.Net.csproj -c Release
+        run: dotnet build ../Moodle.Net.csproj -c Release
         
       - run: dotnet pack --no-build --configuration Release --output ${{ env.NuGetDirectory }}
 
