--- a/Moodle.Net/Moodle.Net.csproj
+++ b/Moodle.Net/Moodle.Net.csproj
@@ -4,10 +4,11 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageProjectUrl>https://github.com/tschokri/Moodle.Net</PackageProjectUrl>
         <PackageIcon>icons\moodle_original_logo_icon_146420.png</PackageIcon>
         <RepositoryUrl>https://github.com/tschokri/Moodle.Net</RepositoryUrl>
+        <Title>Moodle.Net</Title>
+        <IsPackable>true</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -33,6 +34,11 @@
         <EnablePackageValidation>true</EnablePackageValidation>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
         <NoWarn>$(NoWarn);CS1591</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <OutputPath>bin/Release/net7.0/</OutputPath>
+      <DocumentationFile>obj/Release/net7.0/Moodle.Net.xml</DocumentationFile>
     </PropertyGroup>
 
 </Project>
