--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,18 +3,18 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'developer'
+      - 'main'
   pull_request:
     branches:
       - '*'
   release:
     types:
-      - 'published'
+      - published
 
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_NOLOGO: true
-  NuGetDirectory: ${{ github.workspace }}/nuget
+  NuGetDirectory: ${{ github.workspace}}/nuget
 
 defaults:
   run:
@@ -27,15 +27,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
       
-      - name: Build Moodle.Net
-        run: dotnet build Moodle.Net/Moodle.Net.csproj -c Release
-        
-      - run: dotnet pack --no-build --configuration Release --output ${{ env.NuGetDirectory }}
-
+      - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
+      
       - uses: actions/upload-artifact@v3
         with:
           name: nuget
@@ -69,8 +66,9 @@ jobs:
         uses: actions/setup-dotnet@v3
       - name: Run tests
         run: dotnet test --configuration Release
-  
+
   deploy:
+    if: github.event_name == 'release'
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
@@ -87,4 +85,3 @@ jobs:
           foreach($file in (Get-ChildItem "${{ env.NuGetDirectory }}" -Recurse -Include *.nupkg)) {
               dotnet nuget push $file --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
           }
-          
