--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,83 +1,39 @@
-name: publish
+name: Build and Publish
+
 on:
-  workflow_dispatch:
   push:
     branches:
-      - 'developer'
-  pull_request:
-    branches:
-      - '*'
-  release:
-    types:
-      - published
-
-env:
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-  DOTNET_NOLOGO: true
-  NuGetDirectory: ${{ github.workspace}}/nuget
-
-defaults:
-  run:
-    shell: pwsh
+      - developer
 
 jobs:
-  create_nuget:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+  build:
+    env:
+      BUILD_CONFIG: 'Release'
+      SOLUTION: 'Moodle.Net'
       
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-      
-      - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
-      
-      - uses: actions/upload-artifact@v3
-        with:
-          name: nuget
-          if-no-files-found: error
-          retention-days: 7
-          path: ${{ env.NuGetDirectory }}/*.nupkg
-
-  validate_nuget:
     runs-on: ubuntu-latest
-    needs: [ create_nuget ]
+      
     steps:
+      - uses: actions/checkout@v2
+          
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.0.5
+          
+      - name: Restore dependencies
+        run: nuget restore $SOLUTION.sln
+        
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-
-      - uses: actions/download-artifact@v3
+        uses: actions/setup-dotnet@v2
         with:
-          name: nuget
-          path: ${{ env.NuGetDirectory }}
-
-      - name: Install nuget validator
-        run: dotnet tool update Meziantou.Framework.NuGetPackageValidation.Tool --global
-
-      - name: Validate package
-        run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NuGetDirectory }}/*.nupkg")
-
-  run_test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+          dotnet-version: '7.x'
+      
+      - name: Build
+        run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+        
       - name: Run tests
-        run: dotnet test --configuration Release
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [ validate_nuget, run_test ]
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: nuget
-          path: ${{ env.NuGetDirectory }}
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
-
-      - name: Publish NuGet package
-        run: dotnet nuget push *.nupkg --source https://nuget.pkg.github.com/acraven/index.json --api-key ${{secrets.GITHUB_TOKEN}}
+        run: dotnet test /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
+        
+      - name: Create NuGet package
+        run: dotnet pack Moodle.Net/Moodle.Net.csproj
+        
+        
