--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
         run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
         
       - name: Run tests
-        run: dotnet test /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal
+        run: dotnet test Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal
         
       - name: Create NuGet package
         run: dotnet pack Moodle.Net/Moodle.Net.csproj
