--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
     
     steps:
       - name: Run tests
-        run: dotnet test Configuration=Release --no-restore --no-build --verbosity normal
+        run: dotnet test /p:Configuration=Release --no-restore --no-build --verbosity normal
         
   deploy:
     runs-on: ubuntu-latest
