--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,9 @@ jobs:
     
     steps:
       - name: Create NuGet package
-        run: dotnet test /p:Configuration=Release --no-restore --no-build --verbosity normal
+        run: |
+          cd Moodle.Net
+          dotnet test /p:Configuration=Release --no-restore --no-build --verbosity normal
       
       - name: Deploy on NuGet.org
         run: |
