--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,9 +34,7 @@ jobs:
         steps:
             - name: Run tests
               run: |
-                  cd Moodle.Net
-                  ls
-                  dotnet test Moodle.Net/Moodle.Net.csproj /p:Configuration=Release --no-restore --no-build --verbosity normal
+                  dotnet test Moodle.Net.csproj /p:Configuration=Release --no-restore --no-build --verbosity normal
 
     deploy:
         runs-on: ubuntu-latest
