--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,8 @@ jobs:
         steps:
             - name: Run tests
               run: |
-                  dotnet test Moodle.Net.csproj /p:Configuration=Release --no-restore --no-build --verbosity normal
+                  ls Moodle.Net
+                  dotnet test Moodle.Net/Moodle.Net.csproj /p:Configuration=Release --no-restore --no-build --verbosity normal
 
     deploy:
         runs-on: ubuntu-latest
