--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,13 +52,14 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Set NuGet package version
-              run: echo "::set-env name=PACKAGE_VERSION::$(echo ${{ github.ref }} | sed 's/refs\/tags\///')"
+              id: version
+              run: echo "::set-output name=PACKAGE_VERSION::$(echo ${{ github.ref }} | sed 's/refs\/tags\///')"
 
             - name: Set up .Net
               uses: actions/setup-dotnet@v2
 
             - name: Create NuGet package
-              run: dotnet pack Moodle.Net/Moodle.Net.csproj -c Release /p:Version=$PACKAGE_VERSION
+              run: dotnet pack Moodle.Net/Moodle.Net.csproj -c Release /p:Version= ${{ steps.version.outputs.PACKAGE_VERSION }}
 
             - name: Deploy on NuGet.org
               run: |
