--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
     release:
         types:
             - created
+    push:
+        branches: developer
 
 jobs:
     build:
@@ -59,7 +61,7 @@ jobs:
               uses: actions/setup-dotnet@v2
 
             - name: Create NuGet package
-              run: dotnet pack Moodle.Net/Moodle.Net.csproj -c Release /p:Version= ${{ steps.version.outputs.PACKAGE_VERSION }}
+              run: dotnet pack -c Release /p:Version= ${{ steps.version.outputs.PACKAGE_VERSION }}
 
             - name: Deploy on NuGet.org
               run: |
