--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,9 @@ jobs:
               uses: actions/setup-dotnet@v2
 
             - name: Create NuGet package
-              run: dotnet pack -c Release /p:Version= ${{ steps.version.outputs.PACKAGE_VERSION }}
+              run: |
+                  ls Moodle.Net
+                  dotnet pack -c Release /p:Version= ${{ steps.version.outputs.PACKAGE_VERSION }}
 
             - name: Deploy on NuGet.org
               run: |
